--- a/index.html
+++ b/index.html
@@ -103,6 +103,15 @@
             <h3>您的選擇</h3>
             <p id="result">請選擇餐點並確認！</p>
         </div>
+        
+        <div id="order">
+           <button type="button" onclick="order()">送出訂單</button>
+        </div>
+    </section>
+  
+    <section id = "order_end" style="display: none;">
+             <h2>訂單已完成</h2>
+             <p>感謝您的點餐，稍後為您送達!</p>
     </section>
     <footer>
         <p>© 2025 歐伊系 日式餐廳 | 聯繫我們</p>
